# harmonyos-dev-mcp

./: .gitignore  DEVELOPMENT_PLAN.md  HarmonyOS AI编程开发方案调研 - 第三阶段.md  HarmonyOS AI编程开发方案调研 - 第二阶段.md  README.md  commit_msg.txt  pyproject.toml  uitree_output.txt  vscode_settings_backup.json
.opencode/: AGENTS.md
harmonyos-mcp-server/: .gitignore  AUGMENT_CONNECTION_DIAGNOSIS.md  AUGMENT_DEBUG_GUIDE.md  AUGMENT_FINAL_CONFIG.md  AUGMENT_FINAL_SETUP.md  AUGMENT_INTEGRATION_SUCCESS.md  AUGMENT_SETUP.md  BUILD_SYSTEM_FIX_SUMMARY.md  FINAL_SOLUTION.md  INTEGRATION_SUMMARY.md  MCP_INTEGRATION_REPORT.md  PROJECT_PROGRESS_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  TASKS.md  TROUBLESHOOTING.md  augment-config-absolute-path.json  augment-config-option1.json  augment-config-option2.json  augment-config-option3.json  augment-mcp-config.json  augment-settings-snippet.json  commit_msg.txt  mcp_config.json  pyproject.toml  requirements.txt  run_mcp.py  start_mcp_debug.bat  start_server.bat  test_build.py  test_build_timing.py  test_get_logs_filter.py  test_mcp_direct.py  test_mcp_protocol.py  test_mcp_startup.py  test_mcp_stdio.py  test_mcp_tools.py  test_output_size.py  test_tools_list.py
harmonyos-mcp-server/.cursor/: mcp.json
harmonyos-mcp-server/docs/: augment-integration.md  build-system-guide.md  hidumper-uitree-guide.md  log-filtering-guide.md  quickstart.md  ui-operations-feasibility.md
harmonyos-mcp-server/docs/tools/: logs_query.md  query_package.md
harmonyos-mcp-server/harmonyos_mcp/: __init__.py  __main__.py  config.py  container.py  exceptions.py  server.py  types.py
harmonyos-mcp-server/harmonyos_mcp/tools/: __init__.py  base.py  build.py  compile.py  general.py  logs.py  registry.py  ui.py  ui_tree.py
harmonyos-mcp-server/harmonyos_mcp/tools/log/: __init__.py  historian.py  parser.py  query.py  time_utils.py
harmonyos-mcp-server/harmonyos_mcp/utils/: __init__.py  log_parser.py  logger.py  retry.py  uitree_parser.py
harmonyos-mcp-server/harmonyos_mcp/utils/hdc/: __init__.py  hdc_app.py  hdc_device.py  hdc_file.py  hdc_package.py  hdc_screenshot.py  hdc_wrapper.py
harmonyos-mcp-server/harmonyos_mcp/utils/wrappers/: compile_wrapper.py  hilogtool_wrapper.py  hvigor_wrapper.py  ui_operations.py
harmonyos-mcp-server/src/: config.py  main.py
harmonyos-mcp-server/src/harmonyos_mcp/: __init__.py  __main__.py  config.py  container.py  exceptions.py  server.py  types.py
harmonyos-mcp-server/src/harmonyos_mcp/tools/: __init__.py  base.py  build.py  compile.py  device.py  logs.py  packages.py  registry.py  ui.py  ui_tree.py
harmonyos-mcp-server/src/harmonyos_mcp/utils/: __init__.py  compile_wrapper.py  hdc_app_mixin.py  hdc_base.py  hdc_device.py  hdc_device_mixin.py  hdc_file_mixin.py  hdc_package.py  hdc_package_mixin.py  hdc_screenshot.py  hdc_screenshot_mixin.py  hdc_ui.py  hdc_ui_mixin.py  hdc_wrapper.py  hilogtool_wrapper.py  hvigor_wrapper.py  log_parser.py  logger.py  retry.py  ui_operations.py  uitree_parser.py
harmonyos-mcp-server/src/utils/: __init__.py  hdc_wrapper.py  hilogtool_wrapper.py  hvigor_wrapper.py  log_parser.py  logger.py  ui_operations.py  uitree_parser.py
harmonyos-mcp-server/tests/: conftest.py  test_basic.py  test_uitree.py
harmonyos-mcp-server/tests/mocks/: __init__.py
harmonyos-mcp-server/tests/unit/: __init__.py  test_build.py  test_device.py  test_retry_and_registry.py  test_ui.py
services/harmonyos_compile_mcp/: pyproject.toml
services/harmonyos_compile_mcp/docs/: USAGE.md
services/harmonyos_compile_mcp/src/harmonyos_compile_mcp/: __init__.py  __main__.py  config.py  container.py  server.py
services/harmonyos_compile_mcp/src/harmonyos_compile_mcp/tools/: compile_tools.py  response.py  types.py
services/harmonyos_compile_mcp/src/harmonyos_compile_mcp/utils/: compile_wrapper.py  logger.py
services/harmonyos_compile_mcp/tests/unit/: test_response_envelope.py
services/harmonyos_dev_mcp/: README.md  pyproject.toml
services/harmonyos_dev_mcp/docs/: logs_query.md  query_package.md  tool_reference.md
services/harmonyos_dev_mcp/src/harmonyos_dev_mcp/: __init__.py  __main__.py  config.py  container.py  server.py  types.py
services/harmonyos_dev_mcp/src/harmonyos_dev_mcp/tools/: build.py  device_support.py  e2e.py  general.py  ui.py
services/harmonyos_dev_mcp/src/harmonyos_dev_mcp/tools/log/: __init__.py  historian.py  parser.py  query.py  time_utils.py
services/harmonyos_dev_mcp/src/harmonyos_dev_mcp/utils/: __init__.py  logger.py
services/harmonyos_dev_mcp/src/harmonyos_dev_mcp/utils/hdc/: hdc_base.py  hdc_device.py  hdc_file.py  hdc_package.py  hdc_ui.py  hdc_wrapper.py
services/harmonyos_dev_mcp/src/harmonyos_dev_mcp/utils/parsers/: window_manager.py
services/harmonyos_dev_mcp/src/harmonyos_dev_mcp/utils/wrappers/: hilogtool_wrapper.py  hvigor_wrapper.py  ui_operations.py
services/harmonyos_dev_mcp/tests/: __init__.py  conftest.py
services/harmonyos_dev_mcp/tests/unit/: test_build.py  test_common_logger.py  test_config.py  test_device.py  test_e2e_tools.py  test_hdc_app.py  test_hdc_device.py  test_hdc_file.py  test_hvigor_wrapper.py  test_retry_and_registry.py  test_server_runtime.py  test_ui.py
services/harmonyos_mcp/: README.md  pyproject.toml
services/harmonyos_mcp/docs/: logs_query.md  query_package.md
services/harmonyos_mcp/src/harmonyos_mcp/: __init__.py  config.py  server.py  types.py
services/harmonyos_mcp/src/harmonyos_mcp/tools/: __init__.py  build.py  device_base.py  e2e.py  general.py  response.py  ui.py  ui_tree.py  wait.py
services/harmonyos_mcp/src/harmonyos_mcp/tools/log/: parser.py  query.py
services/harmonyos_mcp/src/harmonyos_mcp/utils/: retry.py  ui_common.py
services/harmonyos_mcp/src/harmonyos_mcp/utils/hdc/: hdc_app.py  hdc_device.py  hdc_file.py  hdc_package.py  hdc_ui.py
services/harmonyos_mcp/tests/: conftest.py
services/harmonyos_mcp/tests/unit/: test_build.py  test_config.py  test_device.py  test_e2e_tools.py  test_hdc_app.py  test_hdc_device.py  test_hvigor_wrapper.py  test_retry_and_registry.py  test_server_runtime.py  test_ui.py
(+68 files in other folders)
