[project]
name = "mcp-ho-dev-workspace"
version = "0.7.2"
description = "HarmonyOS MCP development workspace"
requires-python = ">=3.12"
dependencies = [
    "harmonyos-dev-mcp",
    "harmonyos-mcp-common",
]

[tool.uv.workspace]
members = ["packages/common", "services/harmonyos_dev_mcp"]

[tool.uv.sources]
harmonyos-dev-mcp = { workspace = true }
harmonyos-mcp-common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["services/harmonyos_dev_mcp/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["packages/common", "services/harmonyos_dev_mcp"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
