[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmonyos-mcp"
version = "0.1.0"
description = "HarmonyOS MCP Server - AI-assisted HarmonyOS development tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HarmonyOS MCP Team" }
]
keywords = [
    "harmonyos",
    "mcp",
    "model-context-protocol",
    "deveco",
    "ai-development"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.31.0",
    "json5>=0.9.14",
    "psutil>=5.9.0",
    "loguru>=0.7.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
harmonyos-mcp = "harmonyos_mcp:main"

[project.urls]
Homepage = "https://github.com/Deslord319/mcp_ho_dev"
Repository = "https://github.com/Deslord319/mcp_ho_dev"
Issues = "https://github.com/Deslord319/mcp_ho_dev/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/harmonyos_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

