[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmonyos-dev-mcp"
version = "0.7.7"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "huduanmu", email = "772927148@qq.com" }
]
dependencies = [
    "harmonyos-mcp-common",
    "loguru>=0.7.0",
]

[project.scripts]
harmonyos-dev-mcp = "harmonyos_dev_mcp:main"

[tool.uv.sources]
harmonyos-mcp-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/harmonyos_dev_mcp"]
